--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="style.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/5f11f2d177.js" crossorigin="anonymous"></script>
+<script src="functions.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,6 +38,12 @@
                         <a href="https://github.com/joao-gabriel-fekete" target="_blank" class="fa fa-github"></a>
                         <a href="https://www.linkedin.com/in/jo%C3%A3o-fekete-7076a814b/" target="_blank" class="fa fa-linkedin"></a>
                     </ul>
+                </div>
+                <div class="coffeeDiv">
+                    <button onclick="makeCoffee()" id="coffeeButton" class="coffeeButton">
+                        Make some coffee
+                        <i class="fa-solid fa-mug-hot"></i>
+                    </button>
                 </div>
             </header>
         </div>
