--- a/coffee.html
+++ b/coffee.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Here is you coffee, bro!</h1>
-    <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/sZtBSJH1jrFLVJc41D" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/coffee-good-morning-sZtBSJH1jrFLVJc41D">via GIPHY</a></p>
+    <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/sZtBSJH1jrFLVJc41D" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/coffee-good-morning-sZtBSJH1jrFLVJc41D">via GIPHY</a></p>
 </body>
 </html>
