--- a/index.html
+++ b/index.html
@@ -55,20 +55,42 @@
                     <h2>About me 
                         <i class="fa-solid fa-user"></i>
                     </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis elementum leo eu lacinia. Sed a accumsan massa. Cras eu tristique leo. Nam suscipit sagittis ullamcorper. Proin non dui at nibh maximus interdum nec cursus odio. Nunc sit amet leo arcu. Vestibulum congue pulvinar dolor vitae volutpat. Nulla egestas tincidunt aliquet. Integer laoreet gravida nisi sed efficitur. Sed ultricies sem ligula, a volutpat leo blandit eget.</p>
+                    <p>My name is João Fekete. I am a Brazilian programmer, student, researcher, and someone who wants to make a better world. I have a deep background in Linguistics, data management, and corpus creation, which I try to applied to my programming skills. I have some experience working with frontend (HTML, CSS, JS), but my area of interest is backend, for which I use mainly Python, PHP, and Java. Recently, I have been working on the development of APIs for websites and research on linguistic data management.<br> The qualities I am acknowledge for are: being a problem solver, having good communication, and being trustworthy.</p>
                 </div>
                 <div id="education" class="education">
-                    <h2>Education
+                    <h2>Education & Certifications
                         <i class="fa-solid fa-graduation-cap"></i>
                     </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et blandit dolor, eget pellentesque augue. Nunc dolor justo, commodo ut dui a, consectetur pharetra leo. Morbi auctor euismod dolor eget pretium. Fusce eu metus turpis. Vivamus maximus justo at nulla pellentesque maximus. Phasellus faucibus orci lorem, faucibus scelerisque dolor consectetur sed. Morbi elit ante, congue vel turpis non, mollis pellentesque neque. Vestibulum ut ante eget urna interdum malesuada. Quisque ac turpis quis erat blandit faucibus in facilisis ipsum. Donec egestas magna magna, sed bibendum urna rhoncus a.</p>
+                    <ul class="list">
+                        <ul class="listElement">
+                            <h5>Federal University of Minas Gerais - UFMG</h5>
+                            <h6>Bachelor's Degree in English (2017 - present)</h6>
+                        </ul>
+                        <ul class="listElement">
+                            <h5>SENAI - SP</h5>
+                            <h6>Administration Assistant</h6>
+                        </ul>
+                        <ul class="listElement">
+                            <h5>Other courses:</h5>
+                            <h6>Scrum Foundation Professional Certificate – SFPC – CertiProf <h6>
+                        </ul>
+                    </ul>
                 </div>
                 <div id="workExperience" class="workExperience">
                     <h2>Work Experience
                         <i class="fa-solid fa-laptop-code"></i>
                     </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et rhoncus velit. Cras bibendum consectetur lorem, a rhoncus metus aliquam at. Nullam ac lacinia ligula, in feugiat sapien. Donec at consequat est. Aenean sit amet magna et risus sagittis maximus et et ipsum. Quisque lacinia ex id lectus sodales suscipit. Etiam risus urna, placerat eget erat a, scelerisque congue lacus. Vivamus nec blandit diam. Phasellus ultrices ex lacus, eget pharetra eros aliquet ac.</p>
-                </div>
+                    <ul class="list">
+                        <ul class="listElement">
+                            <h5>Avenue Code - Internship (2021 - present)</h5>
+                            <p>I work on the development of websites. The technologies we use are Wordpress, Hubspot, HTML, CSS, JS, PHP.</p>
+                        </ul>
+                        <ul class="listElement">
+                            <h5>OLA Open Language Access - Researcher (2021 - present)</h5>
+                            <p>I do research on corpus linguistics and develop pipelines for untructured data retrieval, storage, and cleaning.</p>
+                        </ul>
+                    </ul>
+                    </div>
                 <div id="projects" class="projects">
                     <h2>Projects:</h2>
                     <div class="projectBox">
@@ -82,10 +104,10 @@
                             </select>
                         </div>
                         <div class="projectsList">
-                            <div id="front-end" class="project front-end show">This website</div>
-                            <div id="python" class="project python show">Hangman</div>
-                            <div id="nlp" class="project nlp show">XML</div>
-                            <div id="nlp" class="project nlp show">NLP</div>
+                            <a href="https://github.com/joao-gabriel-fekete/joao-gabriel-fekete.github.io" id="front-end" class="project front-end show">Website</a>
+                            <a href="https://github.com/joao-gabriel-fekete/hangman-forca" id="python" class="project python show">Hangman</a>
+                            <a href="https://github.com/joao-gabriel-fekete/WordAndXML" id="python" class="project python show">Word document information extraction</a>
+                            <a href="https://github.com/joao-gabriel-fekete/NLP" id="nlp" class="project nlp show">NLP</a>
                         </div>
                     </div>
                 </div>
